# rust-oracle

./: .gitmodules  .travis.yml  Cargo.toml
.travis/: setup_accounts.sh
odpi-rs/: Cargo.toml
odpi-rs/src/: conn.rs  context.rs  error.rs  lib.rs  stmt.rs  util.rs
odpi-rs/src/types/: mod.rs  object_attr.rs  object_type.rs
odpi-sys/: Cargo.toml
odpi-sys/src/: lib.rs
oracle/: Cargo.toml  README.md
oracle/src/: connection.rs  error.rs  lib.rs  row.rs  sql_value.rs  statement.rs  util.rs  version.rs
oracle/src/sql_type/: chrono.rs  interval_ds.rs  interval_ym.rs  object.rs  oracle_type.rs  timestamp.rs
oracle/tests/: SetupTest.sql
src/: binding.rs  connection.rs  error.rs  lib.rs  statement.rs
