[package]
name = "odpi-rs"
version = "0.1.0"
authors = ["Kubo Takehiro <kubo@jiubao.org>"]
repository = "https://github.com/kubo/rust-oracle"
license = "UPL-1.0/Apache-2.0"
keywords = ["oracle", "database"]
readme = "README.md"
description = "straight bindings to Oracle Database Programming Interface for C (ODPI-C)"
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
odpi-sys = { path = "../odpi-sys", version = "0.1.0" }
