[package]
name = "oracle"
version = "0.3.3"
authors = ["Kubo Takehiro <kubo@jiubao.org>"]
repository = "https://github.com/kubo/rust-oracle"
license = "UPL-1.0/Apache-2.0"
keywords = ["oracle", "database"]
readme = "README.md"
description = "Oracle binding"
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
paste = "0.1"
chrono = { version = "0.4", optional = true }
odpi-sys = { path = "../odpi-sys", version = "0.1.0" }

[build-dependencies]
cc = "1.0"
